--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -683,7 +683,7 @@ section .container {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #9B40FF;
+  background: #9B40FF; 
   border-radius: 5px;
   transition: all .3s ease-out 0s;
   display: flex;
@@ -727,10 +727,10 @@ section .container {
   margin-bottom: 0;
 }
 
-.services .icon-box:hover {
+/* .services .icon-box:hover {
   background: #9B40FF;
   border-color: #9B40FF;
-}
+} */
 
 .services .icon-box:hover .icon {
   background: #fff;
@@ -748,6 +748,37 @@ section .container {
   color: #fff;
 }
 
+#git, #youtube {
+  font-size: 25px;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  line-height: 1;
+  margin-right: 8px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: 20px;
+  display:inline-flex;
+}
+
+#git:hover{
+background: #9B40FF;
+}
+
+
+#youtube:hover{
+  background: #9B40FF;
+}
+
+#social {
+  padding-top: 5px;
+}
+
+#etiquetas{
+  padding-top: 5px;
+}
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
